# flask-react

./: .bumpversion.cfg  .gitignore  DOCUMENTATION.md  README.md  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  ssr_server.js
.github/workflows/: publish.yml  quality.yml  release.yml  test.yml
dev/flask_react/: __init__.py  exceptions.py  renderer.py
examples/: README.md  app.py  requirements.txt
examples/components/: ContactForm.jsx  Dashboard.jsx  HomePage.jsx  NotFound.jsx  ProductList.jsx  SimpleTest.jsx  UserList.jsx  UserProfile.jsx
flask_react/: __init__.py  cli.py  extension.py  node_renderer.py
scripts/: README.md  bump_version.py
tests/: __init__.py  test_flask_react.py
