[metadata]
name = flask-react-ssr
version = 0.1.0
author = Baraa Khanfar
author_email = baraa60@icloud.com
description = A Flask extension for server-side React component rendering using Node.js
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/baraakh30/flask-react
project_urls =
    Bug Tracker = https://github.com/baraakh30/flask-react/issues
    Documentation = https://github.com/baraakh30/flask-react#readme
    Source Code = https://github.com/baraakh30/flask-react
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Framework :: Flask
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.7
install_requires =
    Flask>=2.0.0
    Jinja2>=3.0.0
include_package_data = True
zip_safe = False

[options.packages.find]
include = flask_react*
exclude = tests*

[options.extras_require]
dev =
    pytest>=6.0.0
    pytest-cov>=2.10.0
    black>=21.0.0
    flake8>=4.0.0
    mypy>=0.900
    isort>=5.0.0

[options.entry_points]
console_scripts =
    flask-react = flask_react.cli:main

[flake8]
max-line-length = 88
extend-ignore = E203, E266, E501, W503
max-complexity = 10
select = B,C,E,F,W,T4,B9
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    .venv,
    .tox,
    *.egg-info

[tool:pytest]
minversion = 6.0
addopts = -ra -q --strict-markers
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
